# xmloxide

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  Makefile  README.md  plan.md
.githooks/: pre-commit
.github/: release.yml.pending
.github/workflows/: bench.yml  ci.yml  compat.yml  release.yml
benches/: ecosystem_bench.rs  parser_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_html_parse.rs  fuzz_xpath.rs
include/: libxml2_compat.h  xmloxide.h
pyxmloxide/src/: lib.rs
scripts/: pre-commit
src/: lib.rs
src/css/: eval.rs  mod.rs
src/ffi/: document.rs  mod.rs  serial.rs  strings.rs  tree.rs  validation.rs  xpath.rs
src/html/: entities.rs  mod.rs
src/html5/: mod.rs  tokenizer.rs  tree_builder.rs
src/parser/: input.rs  mod.rs  push.rs  xml.rs
src/reader/: mod.rs
src/sax/: mod.rs
src/serial/: c14n.rs  html.rs  mod.rs  xml.rs
src/tree/: mod.rs  node.rs
src/util/: dict.rs  qname.rs
src/validation/: dtd.rs  mod.rs  relaxng.rs  schematron.rs  xsd.rs
src/xpath/: eval.rs  lexer.rs  mod.rs  regex.rs
tests/: conformance.rs  debug_failing.rs  debug_html.rs  ffi_tests.rs  html5lib_tree_construction.rs  libxml2_compat.rs  property_tests.rs  real_world_xml.rs
tests/libxml2-compat/: BASELINE.md
xmloxide-wasm/src/: lib.rs
